syntax = "proto3";

package raft_badger;

service ClusterService {
    rpc SendCommand (Command) returns (CommandResponse) {}
    rpc Join (JoinRequest) returns (JoinResponse) {}
}

enum Operation {
    GET = 0;
    SET = 1;
    DELETE = 2;
}

message Command {
    Operation operation = 1;
    uint64 timestamp = 2;
    bytes key = 3;
    bytes value = 4;
}

message CommandResponse {
    Operation operation = 1;
    bool is_success = 2;
    string error_message = 3;
    bytes value = 4;
}

message JoinRequest {
    string raft_address = 1;
    string server_address = 2;
    string id = 3;
}

message JoinResponse {
    bool is_success = 1;
    string error_message = 2;
}