syntax = "proto3";

package raft_badger;

service SequenceService {
    rpc GetNodeId (NodeIdRequest) returns (NodeIdResponse) {}
    rpc GetSequenceChunk (sequenceChunkRequest) returns (sequenceChunkResponse) {}
}

message NodeIdRequest {
    string addr = 1;
}

message NodeIdResponse {
    uint64 node_id = 1;
}

message sequenceChunkRequest {
    string sequence_name = 1;
}

message sequenceChunkResponse {
    string sequence_name = 1;
    uint64 start = 2;
    uint64 end = 3;
    uint64 offset = 4;
    uint64 count = 5;
}